Spacing fixes

--- a/src/components/contact/styles.css
+++ b/src/components/contact/styles.css
@@ -8,26 +8,29 @@
           animation: floater 4s infinite ease-in-out;
 }
 
-.moon{
+.earth{
   background-color: black;
   color: yellow;
   background: url('../../assets/earth.png');
   background-position: center;
   background-size: cover;
   border-radius: 100%;
-  margin-top: -7rem;
-  margin-left: -7rem;
-  height: 14rem;
-  width: 14rem;
+  margin-top: -5.5rem;
+  margin-left: -5.5rem;
+  height: 11rem;
+  width: 11rem;
+}
+
+.contact_title{
+  font-size: 1.5rem;
+  margin: 1.5rem 0 0 0;
 }
 
 .visibility2{
   background: -webkit-linear-gradient(rgba(0,0,0,0.45), rgba(0,0,0,0.45));
   background: linear-gradient(rgba(0,0,0,0.45), rgba(0,0,0,0.45));
-  margin-top: 1.2rem;
-  padding: 0 .5rem 1rem .5rem;
+  padding: 0 .5rem 1.3rem .5rem;
   border-radius: 2rem;
-  display: inline-block;
 }
 
 .contact div span{
@@ -48,16 +51,16 @@
 
 /* ===ROCKET ANIMATION=== */
 
-.rocket2 img{
-  width: 4rem;
-  padding: .2rem;
+.moon img{
+  width: 3rem;
+  padding: -.2rem;
   -webkit-transform: rotate(55deg);
     transform: rotate(55deg);
 }
 
 .animate2 {
   position: absolute;
-  top: 45%;
+  top: 47%;
   -webkit-animation: myOrbit 17s linear infinite;
           animation: myOrbit 17s linear infinite;
 }
@@ -98,4 +101,34 @@
 		           translate(-300%) 
 		           rotate(-360deg);
 	}
+}
+
+@media screen and (min-width: 420px){
+	.earth{
+    margin-top: -7rem;
+    margin-left: -7rem;
+    height: 14rem;
+    width: 14rem;
+	}
+
+	.moon img{
+    width: 4rem;
+    padding: .2rem;
+	}
+  
+  .contact_title{
+    font-size: 2rem;
+  }
+
+  .visibility2{
+    margin-top: 1.2rem;
+    padding: 0 .5rem 1rem .5rem;
+    border-radius: 2rem;
+    display: inline-block;
+  }
+
+  .moon img{
+    width: 4rem;
+    padding: .2rem;
+  }
 }
